[project]
name = "us-economic-calendar-bot"
version = "0.1.0"
description = "بوت تيليجرام للتقويم الاقتصادي الأمريكي"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.3",
    "python-dotenv>=1.0.1",
    "python-telegram-bot==20.7",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0"
]